# faust-large-message-serializer

./: .bumpversion.cfg  .gitignore  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py
faust_large_message_serializer/: __init__.py  config.py  s3_serializer.py  serializer.py
faust_large_message_serializer/blob_storage/: amazon_blob_storage.py  azure_blob_storage.py  blob_storage.py  blog_storage_factory.py  empty_blob.py
faust_large_message_serializer/clients/: retriever_client.py  retrieving_client.py  storage_client.py  storing_client.py
faust_large_message_serializer/utils/: uri_parser.py
faust_s3_backed_serializer/: __init__.py  config.py  s3_serializer.py  serializer.py
faust_s3_backed_serializer/blob_storage/: amazon_blob_storage.py  azure_blob_storage.py  blog_storage_factory.py
faust_s3_backed_serializer/clients/: retriever_client.py  storage_client.py
tests/: __init__.py  s3_serializer_test.py  utils.py
tests/integration/: docker-compose.yml  large_message_azure_test.py  large_message_s3_test.py
tests/unit/: storing_client_test.py  test_config.py  test_storage_factory.py
