[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "faust_large_message_serializer"
dist-name = "faust-large-message-serializer"
author = "bakdata"
author-email = "opensource@bakdata.com"
home-page = "https://github.com/bakdata/faust-s3-backed-serializer"
description-file="README.md"
requires-python = ">=3.6"
requires = [
    "boto3",
    "faust-streaming",
    "bump2version",
    "types-boto",
    "azure-storage-blob",
    "loguru",
    "dataclasses; python_version == '3.6'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "botocore",
    "pytest-docker-compose"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--docker-compose=tests/integration/docker-compose.yml"
testpaths = [
    "tests/unit",
    "tests/integration",
]
